# NERTC-Flutter-SDK

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml  run_pigeon.sh
.github/workflows/: main.yml
android/: .gitignore  build.gradle  gradlew  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/netease/nertcflutter/: FLTUtils.java  FlutterVideoRenderer.java  Messages.java  NERtcAudioProcessObserverImpl.java  NERtcCallbackImpl.java  NERtcChannelImpl.java  NERtcChannelManager.java  NERtcCorePlugin.java  NERtcEngine.java  NERtcPlugin.java  NERtcStatsObserverImpl.java  NERtcSubCallbackImpl.java  SafeEventSink.java  SafeMethodChannel.java  SafeResult.java  SurfaceTextureRenderer.java  ThreadUtils.java
android/src/main/java/com/netease/nertcflutter/bridge/: NERtcApiBridge.java
example/: .gitignore  README.md  pubspec.yaml
example/android/: .gitignore  build.gradle  gradle.properties  settings.gradle  settings_aar.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/netease/nertc_core/nertc_core_example/: CallForegroundService.java  ForegroundServiceConfig.java  MainActivity.java  NENotificationManager.java
example/android/app/src/main/java/com/netease/nertcflutter/nertc_example/: MainActivity.java
example/android/gradle/wrapper/: gradle-wrapper.properties
example/assets/: config.properties
example/ios/: .gitignore  Podfile
example/ios/Assets.xcassets/filter_style_f1.imageset/: Contents.json
example/ios/Runner/: AppDelegate.h  AppDelegate.m  Info.plist  RunnerRelease.entitlements  main.m
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner/Base.lproj/: Main.storyboard
example/ios/nertc_core_broadcast/: SampleHandler.m  nertc_core_broadcastDebug.entitlements
example/lib/: about.dart  call.dart  channel.dart  config.dart  main.dart  native_log_helper.dart  settings.dart  utils.dart
example/macos/: .gitignore
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  LogPlugin.swift  MainFlutterWindow.swift  PermissionPlugin.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  utils.cpp
ios/: nertc.podspec  nertc_core.podspec
ios/Classes/: FLNERtcEngineVideoFrameDelegate.h  FLNERtcEngineVideoFrameDelegate.m  FLNERtcEngineVideoFrameObserver.h  FlutterVideoRenderer.h  FlutterVideoRenderer.m  NERtcChannelImpl.h  NERtcChannelImpl.m  NERtcChannelManager.h  NERtcChannelManager.m  NERtcPlugin.h  NERtcPlugin.m  NERtcScreenShareHostDelegate.h  NERtcScreenShareHostDelegate.m  NERtcStatsObserverImpl.h  NERtcStatsObserverImpl.m  NERtcSubCallbackImpl.h  NERtcSubCallbackImpl.m  NertcCorePlugin.h  NertcCorePlugin.m  messages.h  messages.m
lib/: nertc.dart  nertc_core.dart
lib/src/: nertc_audio_effect.dart  nertc_audio_mixing.dart  nertc_base.dart  nertc_device.dart  nertc_engine.dart  nertc_event_callback.dart  nertc_parameters_key.dart  nertc_stats.dart  nertc_video_renderer.dart  nertc_video_view.dart
lib/src/api/: device_collection.dart  log_service.dart  nertc_audio_effect.dart  nertc_audio_mixing.dart  nertc_channel.dart  nertc_desktop_screencapture.dart  nertc_device.dart  nertc_engine.dart  nertc_event_callback.dart  nertc_video_renderer.dart
lib/src/ffi/: ffi_define.dart  nertc_bindings_generated.dart  nertc_ffi.dart  nertc_render.dart
lib/src/impl/: device_collection_impl.dart  nertc_audio_effect_impl.dart  nertc_audio_mixing_impl.dart  nertc_channel_impl.dart  nertc_desktop_screencapture_impl.dart  nertc_device_impl.dart  nertc_engine_impl.dart  nertc_video_renderer_impl.dart
lib/src/internal/: audio_effect_event_handler.dart  audio_mixing_event_handler.dart  channel_event_handler.dart  device_event_handler.dart  event_handler.dart  messages.dart  nertc_common.dart  once_event_handler.dart  stats_event_handler.dart  utils.dart  video_renderer_impl.dart
macos/: nertc.podspec  nertc_core.podspec
macos/Classes/: NERtcPlugin.swift  NERtcTexture.h  NERtcTexture.mm  NertcCorePlugin.h  NertcCorePlugin.mm  dart_api_dl.c  transform.cc
pigeons/: message.dart
windows/: CMakeLists.txt  Messages.cpp  Messages.h  nertc_core_plugin.cpp  nertc_core_plugin.h  nertc_core_plugin_c_api.cpp
windows/cmake/: DownloadSDK.cmake
windows/include/nertc_core/: nertc_core_plugin_c_api.h
wrapper/: channel_delegate.cpp  channel_mediastats_observer.cpp  channel_wrapper.cpp  device_controller.cpp  engine_delegate.cpp  engine_wrapper.cpp  engine_wrapper.h  mediastats_observer.cpp  nertc_define.h  nertc_wrapper.cpp  nertc_wrapper.h  screencapture_wrapper.cpp  snapshot_wrapper.cpp  texture_render.cc  texture_render.h  video_view_controller.cc  video_view_controller.h
wrapper/dart/: dart_api.h  dart_api_dl.c  dart_api_dl.h  dart_native_api.h  dart_tools_api.h  dart_version.h
wrapper/dart/internal/: dart_api_dl_impl.h
wrapper/logic/: convert.cpp  convert.h
